--- a/backend/src/templates/flashcard_test.html
+++ b/backend/src/templates/flashcard_test.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block head %}
 {% endblock %} {% block body %}
+<i class="loader"></i>
 <div class="flashcard">
     <div class="flashcard-child flashcard-top">
         <div class="flashcard-flip"><img src="{{ url_for('static', filename='img/rotate-icon.png') }}" /></div>
