--- a/backend/src/templates/results.html
+++ b/backend/src/templates/results.html
@@ -6,12 +6,25 @@
 
 <div class="results-layout">
     <div class="results-files">
-        <div class="reasults-files-header">
+        <div class="results-files-header">
             <h2>Documents</h2>
             <button class="button-1">Export</button>
         </div>
-        <ul>
-        </ul>
+        <div class="results-flashcards">
+            <p>Flashcards:</p>
+            <ul>
+            </ul>
+        </div>
+        <div class="results-keywords">
+            <p>Keyword/Definition: </p>
+            <ul>
+            </ul>
+        </div>
+        <div class="results-test">
+            <p>Test/Quiz:</p>
+            <ul>
+            </ul>
+        </div>
     </div>
     <div class="results-output"></div>
 </div>
