--- a/backend/src/templates/results.html
+++ b/backend/src/templates/results.html
@@ -11,17 +11,17 @@
             <button class="button-1">Export</button>
         </div>
         <div class="results-flashcards">
-            <p>Flashcards:</p>
+            <p><b>Flashcards:</b></p>
             <ul>
             </ul>
         </div>
         <div class="results-keywords">
-            <p>Keyword/Definition: </p>
+            <p><b>Keyword/Definition:</b></p>
             <ul>
             </ul>
         </div>
         <div class="results-test">
-            <p>Test/Quiz:</p>
+            <p><b>Test/Quiz:</b></p>
             <ul>
             </ul>
         </div>
