Hide convert button instead of disabling it

--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -48,7 +48,7 @@
         <input type="radio" id="radio-definition" name="convert_type" value="keywords">
         <label for="radio-definition">Keyword/Definition</label>
     </div>
-    <button class="file-convert-btn button-1-disabled" onclick="convert_files()">Convert
+    <button class="file-convert-btn button-1 hidden" onclick="convert_files()">Convert
         Files</button>
 </div>
 <!-- Temporary DB values test: 
