--- a/backend/src/static/css/main.css
+++ b/backend/src/static/css/main.css
@@ -293,59 +293,27 @@ input[type="submit"] {
   animation-fill-mode: forwards;
 }
 
-.warn,
-.warn::before,
-.warn::after {
-  position: relative;
-  padding: 0;
-  margin: 0;
+.error {
+  right: 32px;
+  top: 32px;
+  width: 32px;
+  height: 32px;
 }
 
-.warn {
-  font-size: 36px;
-  color: transparent;
-}
-
-.warn.warning {
-  display: inline-block;
-
-  top: 0.225em;
-
-  width: 1.15em;
-  height: 1.15em;
-
-  overflow: hidden;
-  border: none;
-  background-color: transparent;
-  border-radius: 0.625em;
-}
-
-.warn.warning::before {
-  content: "";
-  display: block;
-  top: -0.08em;
-  left: 0em;
+.error:before,
+.error:after {
   position: absolute;
-  border: transparent 0.6em solid;
-  border-bottom-color: #fd3;
-  border-bottom-width: 1em;
-  border-top-width: 0;
-  box-shadow: #999 0 1px 1px;
+  left: 15px;
+  content: " ";
+  height: 33px;
+  width: 6px;
+  background-color: red;
 }
-
-.warn.warning::after {
-  display: block;
-  position: absolute;
-  top: 0.3em;
-  left: 0;
-  width: 100%;
-  padding: 0 1px;
-  text-align: center;
-  font-family: "Georgia";
-  content: "!";
-  font-size: 0.65em;
-  font-weight: bold;
-  color: #333;
+.error:before {
+  transform: rotate(45deg);
+}
+.error:after {
+  transform: rotate(-45deg);
 }
 
 .checkmark-done {
@@ -497,6 +465,13 @@ input[type="submit"] {
   margin-left: auto;
   order: 2;
   margin-right: 10px;
+}
+
+.results-files .error {
+  position: sticky;
+  margin-left: auto;
+  order: 2;
+  margin-right: 5px;
 }
 
 .results-files li p {
