--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}?u={{ last_updated }}" />
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+    <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.5.6/dist/progressbar.js"></script>
     <script src="{{ url_for('static',filename='js/base.js') }}?u={{ last_updated }}"></script>
     <meta charset="UTF-8">
     <meta name="keywords"
