--- a/backend/src/static/css/main.css
+++ b/backend/src/static/css/main.css
@@ -432,15 +432,17 @@ input[type="submit"] {
 .results-layout {
   margin-top: 10px;
   display: flex;
-  border: 1px solid black;
+  height: 100%;
+  min-height: 0;
 }
 
 .results-files {
-  border: 1px solid black;
+  border: 6px ridge #aaa3f9;
   flex-grow: 0; /* do not grow   - initial value: 0 */
   flex-shrink: 0; /* do not shrink - initial value: 1 */
   flex-basis: 20em; /* width/height  - initial value: auto */
   padding: 4px;
+  align-self: baseline;
 }
 
 .results-files ul {
@@ -494,11 +496,20 @@ input[type="submit"] {
 
 .results-output {
   flex-grow: 1;
-  padding: 4px;
+  padding: 8px;
 }
 
 .results-output h2 {
+  font-size: 180%;
   text-align: center;
+}
+
+.results-output .output-text {
+  margin: 0;
+  margin-top: 5px;
+  background-color: #cdccff;
+  padding: 4px;
+  border: 6px ridge #aaa3f9;
 }
 
 .results-files-header {
