Improve button-1 CSS

--- a/backend/src/static/css/main.css
+++ b/backend/src/static/css/main.css
@@ -231,17 +231,17 @@ input[type="submit"] {
 }
 
 .button-1:focus {
-  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px,
-    #3c4fe0 0 -3px 0 inset;
+  box-shadow: #7270b6 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px,
+    #484775 0 -3px 0 inset;
 }
 
 .button-1:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #484775 0 -3px 0 inset;
   transform: translateY(-2px);
 }
 
 .button-1:active {
-  box-shadow: #3c4fe0 0 3px 7px inset;
+  box-shadow: #484775 0 3px 7px inset;
   transform: translateY(2px);
 }
 
@@ -404,12 +404,6 @@ input[type="submit"] {
 
 .flashcard-bottom p {
   margin: 0;
-}
-
-.flashcard-text {
-}
-
-.flashcard-count {
 }
 
 .arrow {
