--- a/backend/src/static/css/main.css
+++ b/backend/src/static/css/main.css
@@ -530,6 +530,19 @@ input[type="submit"] {
   margin: 4px;
 }
 
+.results-options {
+  border: 6px double #aaa3f9;
+  background-color: #cdccff;
+  margin: 4px;
+  display: flex;
+  justify-content: center;
+}
+
+.results-options button {
+  margin: 8px;
+  padding: 10px;
+}
+
 /* The typing effect */
 @keyframes typing {
   from {
