Load documents instantly if already converted

--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -2,6 +2,7 @@
 {% block head %}
 <script src="{{ url_for('static',filename='js/index.js') }}?u={{ last_updated }}"></script>
 <!-- <script src="{{ url_for('static',filename='js/index_fluff.js') }}?u={{ last_updated }}"></script> -->
+<link rel="canonical" href="https://www.pdf2flashcards.com" />
 {% endblock %} {% block body %}
 <div>
     <div class="center-horizontally center-inside-elems">
