--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -14,6 +14,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="robots" content="index, follow">
     <title>PDF2Flashcards</title>
+    <script>
+        console.log("{{ session['logged_in'] }}")
+    </script>
     {% block head %}{% endblock %}
 </head>
 
@@ -24,10 +27,16 @@
             <li><a href="/results">Scanned PDFs</a></li>
             <li><a href="/help">Help</a></li>
         </ul>
+        {% if session.logged_in %}
+        <ul>
+            <li><a href="/profile">Profile</a></li>
+        </ul>
+        {% else %}
         <ul>
             <li><a href="/register">Register</a></li>
             <li><a href="/login">Login</a></li>
         </ul>
+        {% endif %}
     </nav>
     {% block body %}{% endblock %}
 </body>
