--- a/backend/src/templates/login.html
+++ b/backend/src/templates/login.html
@@ -2,6 +2,16 @@
 {% block head %}
 {% endblock %} {% block body %}
 <div class="login-container">
-    Login: TBA
+    <form action="{{ url_for('login') }}" method="post">
+        <p>{{error_msg}}</p>
+        <p>Email:</p>
+        <input type="email" name="email" required />
+
+        <p>Password:</p>
+        <input type="password" name="password" required />
+
+        <button type="submit">Login</button>
+    </form>
 </div>
+
 {% endblock %}
