Begin stripe integration

--- a/backend/src/templates/profile.html
+++ b/backend/src/templates/profile.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block head %}
 {% endblock %} {% block body %}
+<p>Your account: {{session.email}}</p>
 <div class="profile-container">
     <form action="/logout" method="post">
+
+        <button type="payment">Add payment</button>
         <button type="submit">Logout</button>
     </form>
 </div>
