--- a/backend/src/static/css/main.css
+++ b/backend/src/static/css/main.css
@@ -137,7 +137,7 @@ p {
   padding: 4px;
   background-color: #cdccff;
   max-width: 650px; /* Set your desired width */
-  min-width: 310px;
+  min-width: 380px;
   min-height: 250px;
   border: 8px dashed #aaa3f9; /* Optional: Add a dashed border for visual style */
 }
@@ -513,6 +513,52 @@ input[type="submit"] {
   text-align: center;
 }
 
+.convert-region ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.convert-region li {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.convert-region li div {
+  display: flex;
+  width: 100%;
+  min-height: 46px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.convert-region li div * {
+  margin: 4px;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.convert-region li button {
+  cursor: pointer;
+  width: 42px;
+  height: 32px;
+  border-radius: 8px;
+  background-color: #7270b6;
+  border: none;
+  color: white;
+}
+
+.convert-region li p {
+  white-space: normal;
+  width: 70%;
+}
+
+.convert-region svg {
+  width: 100px;
+  height: 8px;
+}
+
 .convert-section {
   max-width: 650px; /* Set your desired width */
   min-width: 310px;
@@ -552,6 +598,10 @@ input[type="submit"] {
   position: relative;
   text-align: center;
   color: white;
+}
+
+.error-text {
+  color: rgb(196, 6, 6);
 }
 
 /* The typing effect */
