--- a/backend/src/templates/help.html
+++ b/backend/src/templates/help.html
@@ -19,8 +19,7 @@
 <div id="help-discord">
     <h3>Join Our Discord:</h3>
     <section>
-        <a href="https://discord.gg/Ehfe2SWZkQ" style=" text-decoration: none; color: #7289da; font-weight: bold; padding: 8px 16px; border: 2px solid
-            #7289da; border-radius: 4px; background-color: #fff;">Join
+        <a href="https://discord.gg/Ehfe2SWZkQ" class="button-1" style="width: 300px;">Join
             Our Discord Server!</a>
     </section>
 </div>
