Prompt paid users of cost for conversion

--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock %} {% block body %}
 <div>
     <div class="center-horizontally center-inside-elems">
-        <h1 class="center-text" style="margin-bottom: 0">PDF-2-Flashcards</h1>
+        <h1 class="center-text" style="margin-bottom: 0; font-size: 60px;">PDF-2-Flashcards</h1>
         <h2 class="center-text">Generate flashcards, test questions, and more</h2>
     </div>
 </div>
