--- a/backend/src/static/css/main.css
+++ b/backend/src/static/css/main.css
@@ -66,14 +66,16 @@ li a:hover {
 }
 
 nav {
+  margin-left: 10px;
+  margin-right: 10px;
   display: flex;
   justify-content: space-between; /* To evenly distribute the items horizontally */
   /*background-color: rgba(3, 10, 223, 0.116);*/
   background-color: var(--gradient-3);
   padding: 10px;
   margin-top: 0;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 nav ul {
@@ -182,7 +184,7 @@ p {
 .upload-area {
   padding: 4px;
   background-color: var(--gradient-3);
-  max-width: 650px; /* Set your desired width */
+  max-width: 700px;
   min-width: 380px;
   min-height: 250px;
   border: 8px dashed var(--gradient-4); /* Optional: Add a dashed border for visual style */
@@ -303,7 +305,7 @@ input[type="submit"] {
   width: 32px;
   height: 32px;
   vertical-align: middle;
-  border: 5px solid #dfdfdf;
+  border: 5px solid var(--gradient-4);
   border-bottom-color: #3c4fe0;
   border-radius: 50%;
   box-sizing: border-box;
@@ -493,6 +495,7 @@ input[type="submit"] {
   padding: 4px;
   align-self: baseline;
   border-radius: 8px;
+  max-width: 30%;
 }
 
 .results-files ul {
@@ -633,6 +636,37 @@ input[type="submit"] {
 
 .convert-options p {
   margin: 4px;
+}
+
+.prompt-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
+}
+
+.prompt-box {
+  background-color: var(--gradient-3);
+  width: 300px;
+  height: 150px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border: 6px double var(--gradient-4);
+}
+.prompt-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.prompt-buttons * {
+  margin: 10px;
 }
 
 .results-options {
