--- a/backend/src/templates/add-payment.html
+++ b/backend/src/templates/add-payment.html
@@ -24,7 +24,9 @@
 </script>
 {% endblock %} {% block body %}
 
-<h1>Add payment:</h1>
+<div class="payment-header center-text">
+    <h1>Add Payment</h1>
+</div>
 
 
 
