Implement PPTX support

--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.5.6/dist/progressbar.js"></script>
     <script src="{{ url_for('static',filename='js/base.js') }}?u={{ last_updated }}"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8533389826717477"
+        crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="keywords"
         content="PDF to flashcards, convert PDF to flashcards, Q&A flashcards, PDF files, flashcard generator, study tool, educational flashcards, online flashcard maker">
