Improve help layout

--- a/backend/src/templates/help.html
+++ b/backend/src/templates/help.html
@@ -10,6 +10,11 @@
         <p>Q: What can I generate?<br>A: You can generate flashcards, keyword/definition pairs, and test/quiz questions.
         </p>
         <p>Q: What are the export options?<br>A: Currently only flashcards can be exported to a new printable PDF.</p>
+        <p>Q: Do you store credit card information?<br>A: <b>NO</b>, all payment information is stored by <a
+                style="color: var(--gradient-5);" href="https://stripe.com/">stripe</a>.</p>
+        <p>Q: Will I be charged if I re-convert the same document?<br>A: If you selected the same conversion type, you
+            won't be
+            charged.</p>
     </div>
 </div>
 
