Allow cancel/changes for payments

--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -24,7 +24,7 @@
     <nav id="base-navbar">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/results">Scanned PDFs</a></li>
+            <li><a href="/results">Converted Documents</a></li>
             <li><a href="/help">Help</a></li>
         </ul>
         {% if session.logged_in %}
