--- a/backend/src/templates/help.html
+++ b/backend/src/templates/help.html
@@ -15,6 +15,9 @@
         <p>Q: Will I be charged if I re-convert the same document?<br>A: If you selected the same conversion type, you
             won't be
             charged.</p>
+        <p>Q: Do you have returns?<br>A: Absolutely. If you have any issues, email us at {{ support_email }}, or join
+            the
+            discord.</p>
     </div>
 </div>
 
