--- a/backend/src/templates/login.html
+++ b/backend/src/templates/login.html
@@ -5,7 +5,7 @@
 <div class="login-container">
     <div class="login-box">
         <form action="{{ url_for('login') }}" method="post">
-            <p>{{error_msg}}</p>
+            <p class="error-text">{{error_msg}}</p>
             <p>Email:</p>
             <input type="email" name="email" required />
 
