--- a/backend/src/templates/profile.html
+++ b/backend/src/templates/profile.html
@@ -4,17 +4,19 @@
 {% endblock %} {% block body %}
 <div class="profile-block">
     <div class="profile-container">
-        <p>Your account: {{session.email}}</p>
+        <p>Your Account: {{session.email}}</p>
         {% if session.card_connected %}
         <p>Account Type: Paid</p>
         <p>Monthly Usage: {{amount // 2}} pages / ${{amount / 100}}</p>
-        <p>Billing due: {{charge_date}}</p>
+        <p>Billing Due: {{charge_date}}</p>
         <div class="profile-buttons">
-            <button class="button-1" style="width: 275px;">Manage payments</button>
+            <a href="/manage-payment">
+                <button class="button-1" style="width: 275px;">Manage payments</button>
+            </a>
             {% else %}
             <p>Account Type: Free</p>
             <a href="/add-payment">
-                <button type="payment" class="button-1" style="width: 275px;">Add payment</button>
+                <button type="payment" class="button-1" style="width: 275px;">Add Payment</button>
             </a>
             {% endif %}
             <form action="/logout" method="post">
