--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -4,6 +4,10 @@
 <!-- <script src="{{ url_for('static',filename='js/index_fluff.js') }}?u={{ last_updated }}"></script> -->
 <link rel="canonical" href="https://www.pdf2flashcards.com" />
 <meta name="google-site-verification" content="3Q-06zBt5OdyGsO-K5KTUa3gsM3Xz56QLXTSQGDZpoY" />
+<script>
+    const card_connected = ("{{ session.card_connected }}".toLowerCase() === "true")
+    const logged_in = ("{{ session.logged_in }}".toLowerCase() === "true")
+</script>
 {% endblock %} {% block body %}
 <div>
     <div class="center-horizontally center-inside-elems">
